--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - ../2. Init Database:/docker-entrypoint-initdb.d
       - ./src/DataBase:/var/lib/postgresql/data
     ports:
-      - ${POSTGRES_PORT}:5432
+      - ${POSTGRES_PORT}:${POSTGRES_PORT}
     restart: unless-stopped
     deploy:
       resources:
@@ -22,23 +22,22 @@ services:
     networks:
       - postgres
 
-  pgadmin:
-    container_name: pgadmin_container
-    image: dpage/pgadmin4:latest
-    environment:
-      PGADMIN_DEFAULT_EMAIL: "habrpguser@habr.com"
-      PGADMIN_DEFAULT_PASSWORD: "pgadminpwd4habr"
-      PGADMIN_CONFIG_SERVER_MODE: "False"
-    volumes:
-      - ./src/DataBase/pgadmin:/var/lib/pgadmin
+  node:
+    container_name: node_container
+    image: node
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    env_file:
+      - .env
     ports:
-      - "5050:80"
+      - ${PORT}:${PORT}
     restart: unless-stopped
-    deploy:
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: 1G
+    depends_on:
+      - postgres
+    volumes:
+      - .:/app/
+      - /app/node_modules
     networks:
       - postgres
 
