--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
 PORT=4000
 
+TYPEORM_CONNECTION=postgres
+
+POSTGRES_DB=test_db
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=123456
+POSTGRES_PORT=5432
+POSTGRES_HOST=postgres_container
+
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
 JWT_SECRET_REFRESH_KEY=secret123123
